feat: expose public filament availability
